change return-value name

--- a/src/mqtt-packet-parser/src/test/gen_test/test_c.template
+++ b/src/mqtt-packet-parser/src/test/gen_test/test_c.template
@@ -153,7 +153,7 @@ int main(int argc, char *argv[]) {{
     }}
 
     kremlinit_globals();
-    struct_fixed_header data = mqtt_packet_parse(request, packet_size);
+    parse_result data = mqtt_packet_parse(request, packet_size);
     Testing_test_start("{}");
 {}
     Testing_test_end();
